--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 
-    <title>3D Solar System using HTML CSS and JavaScript - Coding Torque</title>
+    <title>3D Solar System </title>
 </head>
 
 <body class="opening hide-UI view-2D zoom-large data-close controls-close">
